# AIE9-Certification-Challenge

./: .gitignore  AI Assistant for Service Businesses.docx  LICENSE  README.md
backend/: README.md  pyproject.toml
backend/api/: index.py
backend/data/: data.txt  testset.json
backend/lib/: __init__.py  agent.py  google_calendar.py
backend/notebooks/: evaluation.ipynb  ingest.ipynb
frontend/: README.md  package-lock.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: chat-header.tsx  chat-input.tsx  chat-messages.tsx  chat-welcome.tsx
frontend/hooks/: use-salon-chat.ts
